--- a/index.css
+++ b/index.css
@@ -11,9 +11,10 @@ header{
     display: flex;
     flex-direction: row;
     align-items: center;
-    height:50px;
+    height: 5%;
     background-color:#474a4d;
     z-index:2;
+    box-sizing:border-box;
 }
 
 .head_title{
@@ -29,8 +30,7 @@ header{
 .for_member {
     margin-left: 45%;
     font-size: 20px;
-    width: 110px;
-    padding-left: 30px;
+    /*padding-left: 30px;*/
     color: #ffffff;
     text-decoration: none;
 }
@@ -45,7 +45,7 @@ header{
 }
 
 .member_introduction {
-    margin-left: 75px;
+    margin-left: 5%;
     font-size: 20px;
     width: 110px;
     padding-left: 30px;
@@ -56,9 +56,10 @@ header{
 
 .main{
     display: flex;
-    margin: 50px 0 0 0;
+    margin: 2.9% 0 0 0;
     flex-direction: column;
     background-color: #233333;
+    box-sizing:border-box;
 }
 
 .content1{
@@ -76,30 +77,37 @@ header{
 .main-title{
     position: absolute;
     top: 25%;
-    left: 38%;
-    display:inline-block;
+    left: 40%;
+    /*display:inline-block;*/
     text-align:left;
-    font-size:60px;
+    /*font-size:60px;*/
+    font-size: 450%;
     color:#ffffff;
     text-shadow: 7px 7px 0 #121212;
 }
 
 .large{
-    font-size: 125px;
+    /*font-size: 125px;*/
+    font-size: 200%;
 }
 
 .span1{
-    font-size:150px;
+    /*font-size:150px;*/
+    font-size: 100%;
 }
+
 
 .content2{
     width: 50%;
+    box-shadow: 3px 3px 0 #a5ac3c;
 }
 
-
+.background-image2{
+    position: relative;
+}
 
 footer{
-    height:300px;
+    height: 300px;
     background-color:#000000;
     color: #ffffff;;
 }
@@ -187,8 +195,12 @@ p{
 /* ボタン全体の位置 */
 .sns_btn{
     position: fixed;
+    /*
     top:700px;
     right:30px;
+    */
+    top: 75%;
+    right: 5%;
     display:flex;
     flex-direction: column;
 }
