--- a/index.css
+++ b/index.css
@@ -20,6 +20,7 @@ header{
 .head_title{
     color:#ffffff;
     margin-left: 10%;
+    font-size: 2vw;
 }
 
 .link{
@@ -29,7 +30,7 @@ header{
 
 .for_member {
     margin-left: 45%;
-    font-size: 20px;
+    font-size: 1.2vw;
     /*padding-left: 30px;*/
     color: #ffffff;
     text-decoration: none;
@@ -37,18 +38,22 @@ header{
 
 .kibousya {
     margin-left: 5%;
-    font-size: 20px;
+    font-size: 1.2vw;
+    /*
     width: 110px;
     padding-left: 30px;
+    */
     color: #ffffff;
     text-decoration: none;
 }
 
 .member_introduction {
     margin-left: 5%;
-    font-size: 20px;
+    font-size: 1.2vw;
+    /*
     width: 110px;
     padding-left: 30px;
+    */
     color: #ffffff;
     text-decoration: none;
 }
@@ -64,24 +69,28 @@ header{
 
 .content1{
     display: flex;
+    position: relative;
     margin: 2px 0;
-    height: 100%;
+    /*height: 100%;*/
     width: 100%;
     flex-direction: column;
 }
 
-.background-image{
+/*
+.background-image1{
     position: relative;
 }
+*/
 
 .main-title{
     position: absolute;
-    top: 25%;
+    top: 18%;
     left: 40%;
     /*display:inline-block;*/
     text-align:left;
     /*font-size:60px;*/
-    font-size: 450%;
+    /*font-size: 450%;*/
+    font-size: 4.5vw;
     color:#ffffff;
     text-shadow: 7px 7px 0 #121212;
 }
