--- a/index.css
+++ b/index.css
@@ -13,13 +13,13 @@ header{
     align-items: center;
     height: 5vh;
     background-color:#474a4d;
-    z-index:2;
-    box-sizing:border-box;
+    z-index:2;    
 }
 
 .head_title{
+    position: absolute;
     color:#ffffff;
-    margin-left: 10%;
+    left: 5vh;
     font-size: 3vh;
 }
 
@@ -28,9 +28,36 @@ header{
     text-decoration:none;
 }
 
+.hamburger_menu{
+    position: absolute;
+    top:1.75vh;
+    right: 10vh;
+}
+
+.hamburger_btn {
+    position: fixed;
+    border: none; /*ボタンを平面に*/
+    padding: 0;
+    color: #ffffff;
+    background: #474a4d;
+    font-size: 2.5vh;
+}
+  
+.hamburger_btn:hover {
+  color: #f3981d;
+}
+
+.menu_list{
+    position: relative;
+    top:3.4vh;
+    left: 10vh;
+    width: 25vw;
+    display: flex;
+    justify-content: center;
+    background-color: #f3981d;
+}
+
 .for_member {
-    /*margin-left: 45%;*/
-    margin-left: 5%;
     font-size: 2vh;
     color: #ffffff;
     text-decoration: none;
@@ -43,20 +70,17 @@ header{
     text-decoration: none;
 }
 
-.member_introduction {
+.record {
     margin-left: 5%;
     font-size: 2vh;
-    /*
-    padding-left: 30px;
-    */
     color: #ffffff;
     text-decoration: none;
 }
 
-
 .main{
     display: flex;
-    margin: 2.9% 0 0 0;
+    margin-top: 5.1vh;
+    padding: 0 0 0 0;
     flex-direction: column;
     background-color: #233333;
     box-sizing:border-box;
@@ -65,12 +89,11 @@ header{
 .content1{
     display: flex;
     position: relative;
-    margin: 2px 0;
-    height: auto;
+    /*margin: 0.25vh 0;*/
+    /*height: auto;*/
     width: 100%;
     flex-direction: column;
 }
-
 
 .background-image1{
     position: relative;
@@ -78,12 +101,10 @@ header{
     height: auto;
 }
 
-
 .main-title{
     position: absolute;
     top: 18%;
     left: 40%;
-    /*display:inline-block;*/
     text-align:left;
     font-size: 4.5vw;
     color:#ffffff;
@@ -91,23 +112,40 @@ header{
 }
 
 .large{
-    /*font-size: 125px;*/
     font-size: 200%;
 }
 
 .span1{
-    /*font-size:150px;*/
     font-size: 100%;
 }
 
+.devided_line{
+    font-size: 4vw;
+}
 
 .content2{
-    width: 50%;
-    box-shadow: 3px 3px 0 #a5ac3c;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
 }
 
 .background-image2{
     position: relative;
+    width: 35%;
+    box-shadow: 1.5vmin 1.5vmin 0 #a5ac3c;
+}
+
+.content3{
+    width: 80%;
+    margin-top: 0;
+    display: flex;
+    flex-direction: row;
+}
+
+.background-image3{
+    position: relative;
+    width: 30%;
+    height: auto;
 }
 
 footer{
@@ -118,12 +156,14 @@ footer{
 
 .foot-title{
     color:#ffffff;
-    margin-left: 2.5%;
-    font-size: 3vh;
+    padding-top: 0.5%;
+    padding-left: 2.5%;
+    font-size: 2.5vh;
 }
 
 p{
     color:#ffffff;
+    padding: 1% 3%;
 }
 
 
