--- a/record/index.css
+++ b/record/index.css
@@ -11,14 +11,16 @@ header{
     display: flex;
     flex-direction: row;
     align-items: center;
-    height:50px;
+    height: 5vh;
     background-color:#474a4d;
-    z-index:2;
+    z-index:2;    
 }
 
 .head_title{
+    position: absolute;
     color:#ffffff;
-    margin-left: 10%;
+    left: 5vh;
+    font-size: 3vh;
 }
 
 .link{
@@ -26,47 +28,71 @@ header{
     text-decoration:none;
 }
 
+.hamburger_menu{
+    position: absolute;
+    top:1.75vh;
+    right: 10vh;
+}
+
+.hamburger_btn {
+    position: fixed;
+    border: none; /*ボタンを平面に*/
+    padding: 0;
+    color: #ffffff;
+    background: #474a4d;
+    font-size: 2.5vh;
+}
+  
+.hamburger_btn:hover {
+  color: #f3981d;
+}
+
+.menu_list{
+    position: relative;
+    top:3.4vh;
+    left: 10vh;
+    width: 25vw;
+    display: flex;
+    justify-content: center;
+    background-color: #f3981d;
+}
+
 .for_member {
-    margin-left: 45%;
-    font-size: 20px;
-    width: 110px;
-    padding-left: 30px;
+    font-size: 2vh;
     color: #ffffff;
     text-decoration: none;
 }
 
 .kibousya {
     margin-left: 5%;
-    font-size: 20px;
-    width: 110px;
-    padding-left: 30px;
+    font-size: 2vh;
     color: #ffffff;
     text-decoration: none;
 }
 
-.member_introduction {
-    margin-left: 75px;
-    font-size: 20px;
-    width: 110px;
-    padding-left: 30px;
+.record {
+    margin-left: 5%;
+    font-size: 2vh;
     color: #ffffff;
     text-decoration: none;
 }
 
 .main{
     display: flex;
-    margin: 50px 0 0 0;
+    margin-top: 5vh;
     flex-direction: column;
     background-color: #abcdef;
-    height:2000px;
+    height: 80vh;
 }
 
 .main_title{
     color: #123123;
+    margin-top: 3vw;
+    margin-left: 3vw;
 }
 
 footer{
-    height:300px;
+    height: 15vh;
     background-color:#000000;
     color: #ffffff;;
 }
@@ -143,8 +169,8 @@ footer{
 /* ボタン全体の位置 */
 .sns_btn{
     position: fixed;
-    top:700px;
-    right:30px;
+    top: 70%;
+    right: 5%;
     display:flex;
     flex-direction: column;
 }
